--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav aria-label="Navegação principal"></nav>
 
     <main></main>
+    <script type="module" src="./script.js"></script>
 
     <footer aria-label="Rodapé"></footer>
   </body>
